--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Assignment Solution for Module 3</title>
   <link rel="stylesheet" href="bootstrap-4.5.0-dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/assignmentstyles3.css">
+  <link rel="stylesheet" href="css/assignment3styles.css">
 </head>
 <body>
   <nav id="header-nav" class="navbar navbar-light">
